deploy/overlays/local/jupyter/jupyter-zib-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jupyter-zib-gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: jupyter.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jupyter-zib-route
spec:
  parentRefs:
    - name: jupyter-zib-gateway
  hostnames:
    - jupyter.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jupyter-zib
          port: 8888
